tests/snapshots/execution_spec__test-rest-api-args.md_assert_2.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "userByName": {
        "id": 1,
        "name": "foo",
        "address": {
          "street": "Kulas Light"
        }
      }
    }
  }
}
