tests/snapshots/execution_spec__test-rest-api-args.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
type Address {
  street: String
}

type Mutation {
  createUser(name: String!): User
}

type Query {
  user(displayName: Boolean!, id: Int!): User
  userByName(name: String!): User
}

type User {
  address: Address
  id: Int
  name: String
}

schema {
  query: Query
  mutation: Mutation
}
