tests/snapshots/execution_spec__test-rest-api-args.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server @upstream {
  query: Query
}

type Address {
  street: String
}

type Query {
  user(displayName: Boolean!, id: Int!): User @http(baseURL: "http://api.com", path: "/user/{{args.id}}/{{args.displayName}}")
  userByName(name: String!): User @http(baseURL: "http://api.com", path: "/userByName/{{args.name}}")
}

type User {
  address: Address
  id: Int
  name: String
}
