tests/snapshots/execution_spec__test-rest-api-cached.md_assert_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "user": {
        "id": 1,
        "name": "foo",
        "address": {
          "street": "Kulas Light"
        }
      }
    }
  }
}
