tests/snapshots/execution_spec__test-rest-api-cached.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server @upstream {
  query: Query
}

type Address {
  street: String
}

type Query {
  user(id: Int!): User @http(baseURL: "http://api.com", path: "/users/{{args.id}}") @cache(maxAge: 1000)
}

type User {
  address: Address
  id: Int
  name: String
}
