tests/snapshots/execution_spec__test-rest-api.md_assert_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "users": [
        {
          "id": 1,
          "name": "foo",
          "address": {
            "street": null
          }
        },
        {
          "id": 2,
          "name": "bar",
          "address": {
            "street": null
          }
        }
      ]
    }
  }
}
