tests/snapshots/execution_spec__test-rest-api.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
type Address {
  street: String
}

type Query {
  users: [User]
}

type User {
  address: Address
  id: Int
  name: String
}

schema {
  query: Query
}
