tests/snapshots/execution_spec__test-rest-api.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server @upstream {
  query: Query
}

type Address {
  street: String
}

type Query {
  users: [User] @http(baseURL: "http://api.com", path: "/users")
}

type User {
  address: Address
  id: Int
  name: String
}
