tests/snapshots/execution_spec__test-scalar-email.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Email

type Query {
  value(email: Email!): Email!
}

schema {
  query: Query
}
